[ZT] fix defect: idea content is too close to right border

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -73,7 +73,7 @@ input.btn-trivial.ui-state-active { background: #ffffff;}
 .section-4 .idea { background-color: #e0ffff; }
 .section-5 .idea { background-color: #ffefd5; }
 .idea-list .idea:hover { border-color: black; }
-.idea-list .idea .idea-wrapper { margin:5px; width: 225px; height: 95px; overflow: hidden; }
+.idea-list .idea .idea-wrapper { width: 225px; height: 95px; overflow: hidden; }
 .idea-list .idea .idea-info { display: table; }
 .idea-list .idea .idea-content { display: table-cell; vertical-align: middle; width: 225px; height: 95px; overflow: hidden; }
 .idea-list .idea.blank { display: table; font-size: 1.1em; background-color: white; border-style: dashed; }
